2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/06_identificateur_non_declare.deca
// Description :
//     Test avec un identificateur non déclarée 
// Resultats :
//    Erreur Contexteulle : fichier.deca:13:4:b identificateur non déclaré
//
// Historique :
// cree le 01/01/2024



{
    int a  = 1 ;
    b = a + 1 ;
}